--- a/requirements.txt
+++ b/requirements.txt
@@ -20,9 +20,13 @@ pandas==0.25.2
 peewee==3.11.2
 protobuf==3.10.0
 pyparsing==2.4.3
+PyQt5==5.13.2
+PyQt5-sip==12.7.0
 python-dateutil==2.8.0
+python-qt==0.50
 pytz==2019.3
 PyYAML==5.1.2
+qtgui==0.0.1
 scikit-learn==0.21.3
 scipy==1.3.1
 six==1.12.0
